Exam01/traces/3-0-ft_range.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e2r10p9.42.fr
Darwin 15.2.0 x86_64
$> date
Thu Jan  7 19:59:38 CET 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.2.0
Thread model: posix
$> clang --version
Apple LLVM version 7.0.2 (clang-700.1.81)
Target: x86_64-apple-darwin15.2.0
Thread model: posix

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-a-distance-c-exam-training/exam_20160107/dsouleym

= Git history ==================================================================
$> git -C /var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user log --pretty='%H - %an, %ad : %s'
5481f1049ae2050dae15ed62110df2bf67cc62f1 - Diallo SOULEYMANE, Thu Jan 7 19:59:25 2016 +0100 : ftrange
12d63f36e6b3222750ee0d5fb3c7cd6d7ca49ae4 - Diallo SOULEYMANE, Thu Jan 7 19:46:54 2016 +0100 : union
6b388780f3983139e99eafacbecbd405c96988ee - Diallo SOULEYMANE, Thu Jan 7 18:33:34 2016 +0100 : ulstr
4474683d98a56450849c1733489e1ee5d3eb6f97 - Diallo SOULEYMANE, Thu Jan 7 18:09:24 2016 +0100 : lets go
 
= Collected files ==========================================
$> ls -lAR /var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user
total 8
-rw-r--r--  1 deepthought  deepthought  982 Jan  7 19:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jan  7 19:59 aff_z
drwxr-xr-x  3 deepthought  deepthought  102 Jan  7 19:59 ft_range
drwxr-xr-x  3 deepthought  deepthought  102 Jan  7 19:59 ulstr
drwxr-xr-x  3 deepthought  deepthought  102 Jan  7 19:59 union

/var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user/aff_z:
total 8
-rw-r--r--  1 deepthought  deepthought  126 Jan  7 19:59 aff_z.c

/var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user/ft_range:
total 8
-rw-r--r--  1 deepthought  deepthought  494 Jan  7 19:59 ft_range.c

/var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user/ulstr:
total 8
-rw-r--r--  1 deepthought  deepthought  382 Jan  7 19:59 ulstr.c

/var/folders/n3/m035066x0kg6_pqwmz4dmplr0000gq/T/tmp5Kk7a1/user/union:
total 8
-rw-r--r--  1 deepthought  deepthought  1063 Jan  7 19:59 union.c
 
= ft_range =====================================================================
$> clang -Wextra -Wall -Werror main.c ft_range.c -o user_exe 
ft_range.c:31:11: error: variable 'tab' is used uninitialized whenever 'if' condition is false [-Werror,-Wsometimes-uninitialized]
        else if (end == start)
                 ^~~~~~~~~~~~
ft_range.c:36:10: note: uninitialized use occurs here
        return (tab);
                ^~~
ft_range.c:31:7: note: remove the 'if' if its condition is always true
        else if (end == start)
             ^~~~~~~~~~~~~~~~~
ft_range.c:5:10: note: initialize the variable 'tab' to silence this warning
        int *tab;
                ^
                 = NULL
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
